# traversable-scan

./: .gitignore  LICENSE  default.nix  shell.nix  traversable-scan.cabal
benchmarks/: benchmarks.hs
src/Data/Traversable/: Scan.hs
tests/: tests.hs
