name:                traversable-scan
version:             0.1.0.0
synopsis:            Prefix sums (scans) for any Traversable structure
homepage:            https://github.com/ttuegel/traversable-scan
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           (c) 2016 Thomas Tuegel
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Traversable.Scan
  build-depends:
      base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite tests
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , traversable-scan
    , linear >= 1.0
    , tasty >= 0.11
    , tasty-quickcheck >= 0.8
    , vector >= 0.5

benchmark benchmarks
  type: exitcode-stdio-1.0
  main-is: benchmarks.hs
  hs-source-dirs: benchmarks
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , traversable-scan
    , criterion >= 1.0
    , random >= 1.0
    , vector >= 0.5